Grace/tests/gibbs/errors/t229.grace
// ERROR = P1040
catch {1 / 0}
    case {Error -> print "Error!"}
    finally

print "hi"
